[package]
name = "portman"
version = "0.2.2"
edition = "2021"
authors = ["Bahadir Araz <bahadiraraz@protonmail.com>"]
description = "Interactive TUI tool to manage and monitor dev server ports"
license = "MIT"
repository = "https://github.com/bahadiraraz/portman"
homepage = "https://github.com/bahadiraraz/portman"
readme = "README.md"
keywords = ["port", "dev", "tui", "terminal", "process"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.29", features = ["signal", "process"] }

[profile.release]
opt-level = 3
lto = true
strip = true
